# auth-jwt-rust

./: .env  Cargo.toml  Dockerfile  diesel.toml  docker-compose.yml
.github/workflows/: deploy.yml
init-scripts/: init.sql
src/: main.rs  schema.rs
src/controller/: jwt_controller.rs  mod.rs  user_controller.rs
src/data/: users.rs
src/utils/: jwt_facade.rs  mod.rs
