[package]
name = "jwt_in_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.7", features = ["postgres", "uuid", "chrono"] }
dotenvy = "0.15"
actix-web = "4.9.0"
env_logger = "0.11.6"
serde = { version = "1.0.218", features = ["derive"] }
tracing-actix-web = "0.7.16"
uuid = { version = "1.14.0", features = ["v4", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
rust-crypto = "0.2.36"
